--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -8,14 +8,16 @@
 
 .layout-left {
   background-color: gray;
+  /* width: 20%; */
 }
 
 .layout-right {
   width: 100%;
-  padding: 20px;
   display: flex;
   flex-direction: column;
   background-color: #f6f8fa;
+  margin-left: 200px;
+  padding: 0rem 1.25rem;
 }
 
 .main-content {
@@ -64,6 +66,16 @@
   width: 100%;
   display: flex;
 }
+
+@media (max-width: 992px) {
+  .div-right {
+    margin: 0px;
+  }
+  .sidebar {
+    display: none;
+  }
+}
+
 /* .card-row > * {
   width: calc(100% / 3);
 } */
