--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -74,6 +74,12 @@
   .sidebar {
     display: none;
   }
+  .ant-menu-light {
+    background: inherit;
+  }
+  .ant-menu-light.ant-menu-root.ant-menu-inline {
+    border: none;
+  }
 }
 
 /* .card-row > * {
