--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -69,7 +69,8 @@
 
 @media (max-width: 992px) {
   .div-right {
-    margin: 0px;
+    margin: 0px !important;
+    width: 100% !important;
   }
   .div-left {
     width: 0 !important;
