--- a/src/components/ModalComponent/AssessmentModal.css
+++ b/src/components/ModalComponent/AssessmentModal.css
@@ -11,16 +11,17 @@
 }
 
 .ant-modal .ant-modal-header {
-  padding: 1.88rem;
+  padding: 1rem 1.8rem;
   margin-bottom: 0;
   border-bottom: 1px solid var(--system-stroke-2, #dadce0);
 }
 .ant-modal .ant-modal-body {
-  padding: 1.25rem 1.88rem;
+  padding: 1.25rem 1.88rem 0;
 }
 .ant-modal .ant-modal-footer {
   padding: 1.25rem 1.88rem;
   box-shadow: 0px -4px 50px 0px rgba(0, 0, 0, 0.09);
+  margin: 0;
 }
 
 .ant-input:placeholder-shown {
