--- a/src/components/ModalComponent/AssessmentModal.css
+++ b/src/components/ModalComponent/AssessmentModal.css
@@ -27,3 +27,8 @@
 .ant-input:placeholder-shown {
   height: 3.125rem;
 }
+
+.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+  height: 3rem;
+  align-items: center;
+}
